Fixed Modal Spacing by using Bootstrap Utilities

--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -19,7 +19,6 @@ body{
 
 .modal-content {
   &.modal-with-header {
-    .modal-header {padding-bottom: 0;}
     .modal-body {padding-top: 0;}
   }
 	.modal-header {
